--- a/01-gallery.html
+++ b/01-gallery.html
@@ -7,6 +7,8 @@
     <title>Image gallery</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/node_modules/basiclightbox/dist/basicLightbox.min.css" />
+
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -15,5 +17,6 @@
     <div class="gallery"></div>
 
     <script src="js/01-gallery.js" type="module"></script>
+    <script src="/node_modules/basiclightbox/dist/basicLightbox.min.js" type="module"></script>
   </body>
 </html>
