--- a/01-gallery.html
+++ b/01-gallery.html
@@ -7,7 +7,7 @@
     <title>Image gallery</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="/node_modules/basiclightbox/dist/basicLightbox.min.css" />
+    <link rel="stylesheet" href="/dist/basicLightbox.min.css" />
 
   </head>
   <body>
@@ -16,7 +16,7 @@
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
   
-    <script src="/node_modules/basiclightbox/dist/basicLightbox.min.js" type="module"></script>
+    <script src="/dist/basicLightbox.min.js" type="module"></script>
     <script src="js/01-gallery.js" type="module"></script>
   </body>
 </html>
