--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -15,7 +15,7 @@
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
 
-    <script src="/dist/simple-lightbox.min.js" type="module"></script>
+    <script src="dist/simple-lightbox.min.js" type="module"></script>
     <script src="js/02-lightbox.js" type="module"></script>
   </body>
 </html>
